# nd-engine

./: .clang-format  .gitignore  .gitmodules  .uncrustify.cfg  2  CMakeLists.txt  autoformat.sh
cmake/: FindGLFW.cmake  FindGLM.cmake
src/: CMakeLists.txt  main.cpp  main.hpp
src/core/: CMakeLists.txt
src/graphics/: CMakeLists.txt  render.cpp  render.hpp  render_context.cpp  render_context.hpp  scene.cpp  scene.hpp
src/graphics/glfw/: CMakeLists.txt  context.cpp  context.hpp  glfw_vulkan.cpp  glfw_vulkan.hpp  pch.hpp  state.cpp  state.hpp  window.cpp  window.hpp  window_init.cpp
src/graphics/vulkan/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_init.cpp  buffer_init.hpp  buffer_view.cpp  buffer_view.hpp  command_buffer.cpp  command_buffer.hpp  command_init.cpp  command_init.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  context_configuration.cpp  context_configuration.hpp  context_configurations.cpp  context_configurations.hpp  context_configurations_builder.cpp  context_configurations_builder.hpp  context_initializers.cpp  context_initializers.hpp  context_initializers_builder.cpp  context_initializers_builder.hpp  descriptor_init.cpp  descriptor_init.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  device.cpp  device.hpp  device_init.cpp  device_init.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_init.cpp  (+66 more)
src/graphics/vulkan/shaders/: frag.frag  frag.glsl  vert.glsl  vert.vert
src/libs/: CMakeLists.txt
src/tools/: CMakeLists.txt  pch.hpp  scope.cpp  scope.hpp  tools.cpp  tools.hpp  tools_runtime.cpp  tools_runtime.hpp  types.cpp  types.hpp
