set(LIBS_NAME nd-src-libs)

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "Glfw Docs" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "Glfw Tests" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Glfw Examples" FORCE)
set(SPDLOG_FMT_EXTERNAL ON CACHE BOOL "Spdlog Fmt External" FORCE)

find_package(Vulkan REQUIRED)
# find_package(GLFW)
# find_package(GLM)
# find_package(fmt)
# find_package(spdlog)
# find_package(GSL)

add_subdirectory(glfw)
add_subdirectory(glm)
add_subdirectory(fmt)
add_subdirectory(spdlog)
add_subdirectory(range-v3)
add_subdirectory(gsl)

add_library(${LIBS_NAME}-vulkan INTERFACE)
add_library(${LIBS_NAME}-glfw INTERFACE)
add_library(${LIBS_NAME}-glm INTERFACE)
add_library(${LIBS_NAME}-fmt INTERFACE)
add_library(${LIBS_NAME}-spdlog INTERFACE)
add_library(${LIBS_NAME}-range INTERFACE)
add_library(${LIBS_NAME}-gsl INTERFACE)

target_link_libraries(${LIBS_NAME}-vulkan INTERFACE Vulkan::Vulkan)
target_link_libraries(${LIBS_NAME}-glfw INTERFACE glfw)
target_link_libraries(${LIBS_NAME}-glm INTERFACE glm)
target_link_libraries(${LIBS_NAME}-fmt INTERFACE fmt::fmt)
target_link_libraries(${LIBS_NAME}-spdlog INTERFACE spdlog::spdlog)
target_link_libraries(${LIBS_NAME}-range INTERFACE range-v3)
target_link_libraries(${LIBS_NAME}-gsl INTERFACE Microsoft.GSL::GSL)
